--- a/src/kubo_launchers/move_base/sbpl/local_costmap_params_close.yaml
+++ b/src/kubo_launchers/move_base/sbpl/local_costmap_params_close.yaml
@@ -3,9 +3,11 @@ local_costmap:
   global_frame: map
   robot_base_frame: base_link
   update_frequency: 5.0
-  publish_frequency: 2.0
+  publish_frequency: 5.0
+  transform_tolerance: 0.25
   static_map: false
   rolling_window: true
+  # inflation_radius: 0.5
   width: 5.0
   height: 5.0
   resolution: 0.025
