--- a/src/kubo_launchers/move_base/sbpl/mpc_local_planner_params.yaml
+++ b/src/kubo_launchers/move_base/sbpl/mpc_local_planner_params.yaml
@@ -7,38 +7,37 @@ MpcLocalPlannerROS:
     type: "simple_car"
     simple_car:
       wheelbase: 0.4
-      front_wheel_driving: False
+      front_wheel_driving: True
       max_vel_x: 0.4
-      max_vel_x_backwards: 0.2
-      max_steering_angle: 1.4
+      max_vel_x_backwards: 0.4
+      max_steering_angle: 0.38
       acc_lim_x: 0.5 # deactive bounds with zero
       dec_lim_x: 0.5 # deactive bounds with zero
       max_steering_rate: 0.5 # deactive bounds with zero
 
   ## Footprint model for collision avoidance
   footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
-    type: "line"
+    type: "polygon"
     radius: 0.2 # for type "circular"
-    line_start: [0.0, 0.0] # for type "line"
-    line_end: [0.4, 0.0] # for type "line"
+    line_start: [-0.1, 0.0] # for type "line"
+    line_end: [0.5, 0.0] # for type "line"
     front_offset: 0.2 # for type "two_circles"
     front_radius: 0.2 # for type "two_circles"
     rear_offset: 0.2 # for type "two_circles"
     rear_radius: 0.2 # for type "two_circles"
-    # footprint: [ [-0.1,-0.125], [0.5,-0.125], [0.5,0.125], [-0.1,0.125] ]
-    vertices: [ [-0.1,-0.125], [0.5,-0.125], [0.5,0.125], [-0.1,0.125] ] # for type "polygon"
     # vertices: [ [0.25, -0.05], [0.18, -0.05], [0.18, -0.18], [-0.19, -0.18], [-0.25, 0], [-0.19, 0.18], [0.18, 0.18], [0.18, 0.05], [0.25, 0.05] ] # for type "polygon"
+    vertices: [[-0.1,-0.125], [0.5,-0.125], [0.5,0.125], [-0.1,0.125]]
     is_footprint_dynamic: False
 
 
   ## Collision avoidance
   collision_avoidance:
-    min_obstacle_dist: 0.27 # Note, this parameter must be chosen w.r.t. the footprint_model
-    enable_dynamic_obstacles: False
+    min_obstacle_dist: 0.1 # Note, this parameter must be chosen w.r.t. the footprint_model
+    enable_dynamic_obstacles: True
     force_inclusion_dist: 0.5
     cutoff_dist: 2.5 
     include_costmap_obstacles: True
-    costmap_obstacles_behind_robot_dist: 1.0
+    costmap_obstacles_behind_robot_dist: 1.5
     collision_check_no_poses: 5
     
 
@@ -50,7 +49,7 @@ MpcLocalPlannerROS:
     xf_fixed: [True, True, True]
     warm_start: True
     collocation_method: "forward_differences"
-    cost_integration_method: "left_sum"
+    cost_integration_method: "trapezoidal_rule" #trapezoidal_rule , left_sum
     variable_grid:
       enable: True  
       min_dt: 0.0;
@@ -65,20 +64,33 @@ MpcLocalPlannerROS:
   planning:
     objective:
       type: "minimum_time" # minimum_time requires grid/variable_grid/enable=True and grid/xf_fixed set properly
+      #type: "quadratic_form"
+    # minimum_time_via_points:
+    #   position_weight: 8.0
+    #   orientation_weight: 8.0
+    #   via_points_ordered: True #False
     terminal_cost:
-      type: "none"
+      type: "none" # can be "none" quadratic
+      # quadratic:
+      #   final_state_weights: [2.0, 2.0, 2.0]
     terminal_constraint:
-      type: "none"
+      type: "none" # can be "none"
+      # l2_ball:
+      #   weight_matrix: [1.0, 1.0, 1.0]
+      #   radius: 5
 
   ## Controller options
   controller:
-    outer_ocp_iterations: 1
+    # outer_ocp_iterations: 1
+  # load plugin related main parameters  
     xy_goal_tolerance: 0.2
-    yaw_goal_tolerance: 0.1
-    global_plan_overwrite_orientation: False
+    yaw_goal_tolerance: 0.157
+    global_plan_overwrite_orientation: True
     global_plan_prune_distance: 1.0
     allow_init_with_backward_motion: True
     max_global_plan_lookahead_dist: 1.5 
+    global_plan_viapoint_sep: 1.0
+
     force_reinit_new_goal_dist: 1.0
     force_reinit_new_goal_angular: 1.57
     prefer_x_feedback: False
