--- a/src/launchers/robot/kubo/params/dual_ekf_navsat_outdoor.yaml
+++ b/src/launchers/robot/kubo/params/dual_ekf_navsat_outdoor.yaml
@@ -1,7 +1,7 @@
 # For parameter descriptions, please refer to the template parameter files for each node.
 
 ekf_se_odom:
-  frequency: 100.0
+  frequency: 30.0
   sensor_timeout: 0.1
   two_d_mode: true
   transform_time_offset: 0.1
@@ -74,7 +74,7 @@ ekf_se_odom:
                                 0,    0,    0,    0,    0,    0,    0,    0,    0,    0,     0,     0,     0,    0,    1.0]
 
 ekf_se_map:
-  frequency: 30
+  frequency: 30.0
   sensor_timeout: 0.1
   two_d_mode: true
   transform_time_offset: 0.1
@@ -182,8 +182,8 @@ navsat_transform:
   delay: 3.0
   magnetic_declination_radians: 0.01308996939  # For lat/long 12.817526147937679, 101.15295253843995
   yaw_offset: 1.570796327  # IMU reads 0 facing magnetic north, not east
-  zero_altitude: true
-  broadcast_cartesian_transform: true
-  publish_filtered_gps: true
-  use_odometry_yaw: true
+  zero_altitude: false
+  broadcast_cartesian_transform: false
+  publish_filtered_gps: false
+  use_odometry_yaw: false
   wait_for_datum: false
